# user-posts-backend-api-project

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
backend/configs/: settings.py  urls.py
backend/core/: pagination.py
mysql/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.000030  binlog.000031  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  (+2 more)
mysql/#innodb_redo/: #ib_redo11
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_214.sdi  slow_log_215.sdi
mysql/performance_schema/: accounts_146.sdi  binary_log_trans_190.sdi  cond_instances_81.sdi  data_lock_waits_162.sdi  data_locks_161.sdi  error_log_82.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  events_stages_cu_112.sdi  events_stages_hi_113.sdi  events_stages_hi_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  (+94 more)
(+33 files in other folders)
